base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: billage-app
  labels:
    purpose: application
---
apiVersion: v1
kind: Namespace
metadata:
  name: billage-data
  labels:
    purpose: stateful-data
---
apiVersion: v1
kind: Namespace
metadata:
  name: billage-edge
  labels:
    purpose: ingress-tls
---
apiVersion: v1
kind: Namespace
metadata:
  name: billage-ops
  labels:
    purpose: monitoring-gitops
